src-ken&y/objects/Accounting_Code__c.object
<CustomObject>
    <customHelpPage>HelpAccountingCode</customHelpPage>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Codes</relationshipLabel>
        <relationshipName>Accounting_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Accounting Codes</relationshipLabel>
        <relationshipName>Accounting_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intercompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Accounting Codes (Intercompany)</relationshipLabel>
        <relationshipName>Accounting_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Validated__c</fullName>
        <label>Last Validated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCOA_Key__c</fullName>
        <externalId>true</externalId>
        <label>SCOA Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>GL_Account__c</columns>
        <columns>SCOA_Key__c</columns>
        <columns>Valid__c</columns>
        <columns>Last_Validated__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Accounting Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>